--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.3.5",
+    "@emotion/react": "11",
+    "@emotion/styled": "11",
+    "@tanstack/react-query": "^4.10.3",
+    "framer-motion": "6",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
