--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
     "baseUrl": "./",
     "paths": {
       "@/pages/*": ["./src/pages/*"],
-      "@/components/*": ["./src/components/*"]
+      "@/components/*": ["./src/components/*"],
+      "@/types/*": ["./src/types/*"]
     },
     "target": "ES2022",
     "lib": ["dom", "dom.iterable", "esnext"],
